# kinesia

./: .gitignore  LICENSE  README.md  dev.sh  models  pyproject.toml
.claude/: launch.json
src/sam_3d_pose_estimation/: __init__.py  analytics.py  artifacts.py  cli.py  detect_stream.py  doctor.py  evaluation.py  gait.py  pipeline.py  render_tracking_video.py  sam3d_runtime.py  subject_preview.py  workspace.py
tests/: test_analytics.py  test_anchor_densify.py  test_appearance_descriptor.py  test_evaluation.py  test_gait.py  test_identity_crossing.py  test_identity_tracker.py  test_offline_resolver.py  test_pipeline_subject_absence.py  test_subject_selection.py  test_track_manager_crossing.py
web-viewer/: .env.example  .gitignore  middleware.ts  package-lock.json  package.json  tsconfig.json
web-viewer/app/: globals.css  layout.tsx  page.tsx
web-viewer/app/api/detect/: route.ts
web-viewer/app/api/jobs/: route.ts
web-viewer/app/api/runs/: route.ts
web-viewer/app/api/subject-locate/: route.ts
web-viewer/app/api/subject-preview/: route.ts
web-viewer/app/process/: page.tsx
web-viewer/components/: kinematics-plot.tsx  video-overlay.tsx  viewer-shell.tsx  viewer-three.tsx
web-viewer/components/wizard/: state.tsx  stepper.tsx  upload-client.ts  wizard-shell.tsx  wizard.css
web-viewer/components/wizard/steps/: detect-step.tsx  run-step.tsx  (+1 more)
web-viewer/lib/: api-client.ts  chunked-uploads.ts  datasets.ts  detect-jobs.ts  export-bundle.ts  export.ts  jobs.ts  one_euro.ts  process-tree.ts  runs.ts  stabilization_xy.ts  store.ts  types.ts  video-timeline.ts
(+16 files in other folders)
