[project]
name = "sam-3d-pose-estimation"
version = "0.1.0"
description = "Video to 3D body mesh pipeline with SAM 3D Body"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "braceexpand>=0.1.7",
    "dill>=0.4.1",
    "einops>=0.8.2",
    "ftfy==6.1.1",
    "fvcore>=0.1.5.post20221221",
    "hydra-core>=1.3.2",
    "huggingface-hub>=0.36.0",
    "iopath>=0.1.10",
    "numpy>=1.26,<2",
    "omegaconf>=2.3.0",
    "opencv-python>=4.10.0.84,<4.13",
    "pandas>=2.3.0",
    "pillow>=11.0.0",
    "pyrootutils>=1.0.4",
    "pytorch-lightning>=2.6.1",
    "pyarrow>=21.0.0",
    "regex>=2025.11.3",
    "rich>=14.3.3",
    "roma>=1.5.6",
    "scikit-image>=0.26.0",
    "timm>=1.0.24",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
    "tqdm>=4.67.0",
    "trimesh>=4.11.2",
    "typing-extensions>=4.15.0",
    "yacs>=0.1.8",
    "pycocotools>=2.0.11",
    "psutil>=7.2.2",
    "mlx>=0.30 ; platform_machine == 'arm64' and sys_platform == 'darwin'",
]

[project.scripts]
sam3d = "sam_3d_pose_estimation.cli:main"
sam3d-video = "sam_3d_pose_estimation.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sam_3d_pose_estimation"]
